--- a/cta_names_mappings.json
+++ b/cta_names_mappings.json
@@ -88,7 +88,7 @@
   "APT29": {
     "full_aliases": ["Cozy Bear", "The Dukes", "Nobelium", "UNC2452", "YTTRIUM", "IRON HEMLOCK", "Dark Halo", "NOBELIUM",
       "StellarParticle", "UNC2452", "Blue Kitsune", "CozyDuke", "NobleBaron", "HotCousin"],
-    "organisations": ["Foreign Intelligence Service/SVR"],
+    "organisations": ["Foreign Intelligence Service", "SVR"],
     "countries": ["RU"]
   },
   "APT30": {
@@ -99,7 +99,7 @@
     "countries": ["CN"]
   },
   "APT32": {
-    "full_aliases": ["WOODLAWN (SCWX CTU)", "TIN WOODLAWN", "BISMUTH"]
+    "full_aliases": ["WOODLAWN", "SCWX CTU", "TIN WOODLAWN", "BISMUTH"]
   },
   "APT33": {
     "full_aliases": ["Elfin", "Refined Kitten", "Magnallium", "Holmium", "COBALT TRINITY", "TA451"],
@@ -111,7 +111,7 @@
   "CHRYSENE": {
   },
   "APT35": {
-    "subgroups": ["DEV-0270/Nemesis Kitten"],
+    "subgroups": ["DEV-0270"],
     "organisations": ["Islamic Revolutionary Guard Corps"],
     "countries": ["IR"]
   },
@@ -160,7 +160,7 @@
   },
   "APT39": {
     "full_aliases": ["Chafer", "Cadelspy", "Remexi", "ITG07", "COBALT HICKMAN", "Remix Kitten", "Cadelle"],
-    "organisations": ["Iranian Ministry of Intelligence and Security/Rana Intelligence Computing"],
+    "organisations": ["Iranian Ministry of Intelligence and Security", "Rana Intelligence Computing"],
     "countries": ["IR"]
   },
   "APT40": {
@@ -233,16 +233,16 @@
   },
   "Xenotime": {
     "full_aliases": ["Triton", "Trisis", "Temp.Veles"],
-    "organisations": ["Applied Developments Center of the Central Scientific Research Institute of Chemistry and Mechanics/TsNIIKhM, State Research Center",
-      "Ministry of Defense of the Russian Federation", "Evgeny Viktorovich Gladkikh"],
+    "organisations": ["Applied Developments Center of the Central Scientific Research Institute of Chemistry and Mechanics",
+      "TsNIIKhM", "State Research Center", "Ministry of Defense", "Evgeny Viktorovich Gladkikh"],
     "countries": ["RU"]
   },
   "Sandworm": {
     "full_aliases": ["Electrum", "Telebots", "BlackEnergy", "Quedagh", "Voodoo Bear", "CTG-7263",
-      "Hades/OlympicDestroyer", "IRIDIUM", "TEMP.Noble", "IRON VIKING"],
+      "Hades", "OlympicDestroyer", "IRIDIUM", "TEMP.Noble", "IRON VIKING"],
     "subgroups": ["Kamacite"],
-    "organisations": ["Unit 74455 of the Main Center of Special Technologies/GTsST",
-      "Main Directorate of the General Staff of the Armed Forces/GRU"]
+    "organisations": ["Unit 74455 of the Main Center of Special Technologies", "GTsST",
+      "Main Directorate of the General Staff of the Armed Forces", "GRU"]
   },
   "Black Energy": {
   },
@@ -252,7 +252,7 @@
   },
   "Muddy Water": {
     "full_aliases": ["Cobalt Ultser", "Seed Worm", "TEMP.Zagros", "Static Kitten", "Earth Vetala"],
-    "organisations": ["Ministry of Intelligence of the Islamic Republic of Iran"],
+    "organisations": ["Ministry of Intelligence"],
     "countries": ["IR"]
   },
   "Gaza Cybergang": {
@@ -271,8 +271,8 @@
   },
   "Dragonfly": {
     "full_aliases": ["Energetic Bear", "Koala", "Iron Liberty", "BROMINE", "BERSERK BEAR", "Crouching Yeti", "Temp.Isotope"],
-    "organisations": ["16th Centre/Military Unit 71330 of the Special Communications and Information Service",
-      "Federal Security Service of the Russian Federation (FSB)", "Pavel Aleksandrovich Akulov",
+    "organisations": ["16th Centre", "Military Unit 71330 of the Special Communications and Information Service",
+      "Federal Security Service of the Russian Federation", "FSB", "Pavel Aleksandrovich Akulov",
       "Mikhail Mikhailovich Gavrilov", "Marat Valeryevich Tyukov"],
     "countries": ["RU"]
   },
