--- a/cta_names_mappings.json
+++ b/cta_names_mappings.json
@@ -211,6 +211,8 @@
   },
   "APT-Q-27": {
   },
+  "UNC94": {
+  },
   "UNC215": {
   },
   "UNC1151": {
@@ -361,5 +363,9 @@
   },
   "StrongPity": {
     "full_aliases": ["Promethium"]
+  },
+  "Aoqin Dragon": {
+  },
+  "AppMilad": {
   }
 }
