--- a/cta_names_mappings.json
+++ b/cta_names_mappings.json
@@ -186,7 +186,7 @@
   },
   "FIN7": {
     "full_aliases": ["Carbon Spider", "Calcium", "Carbanak", "Navigator", "TelePort Crew", "GOLD NIAGARA", "Anunak",
-      "ELBRUS"]
+      "ELBRUS", "Black Basta"]
   },
   "FIN8": {
   },
