Add Earth Berberoka

--- a/cta_names_mappings.json
+++ b/cta_names_mappings.json
@@ -367,5 +367,8 @@
   "Aoqin Dragon": {
   },
   "AppMilad": {
+  },
+  "Earth Berberoka": {
+    "full_aliases": ["GamblingPuppet", "DiceyF"]
   }
 }
