--- a/cta_names_mappings.json
+++ b/cta_names_mappings.json
@@ -370,5 +370,8 @@
   },
   "Earth Berberoka": {
     "full_aliases": ["GamblingPuppet", "DiceyF"]
+  },
+  "Scattered Spider": {
+    "full_aliases": ["Roasted 0ktapus", "UNC3944"]
   }
 }
