--- a/cta_names_mappings.json
+++ b/cta_names_mappings.json
@@ -122,6 +122,7 @@
   "APT36": {
     "full_aliases": ["Transparent Tribe", "ProjectM", "Mythic Leopard", "TEMP.Lapis", "COPPER FIELDSTONE",
       "Gorgon Group", "Green Havildar", "Operation C-Major", "ProjectM", "Earth Karkaddan", "APT-C-56"]
+    "countries": ["PK"]
   },
   "APT37": {
     "subgroups": ["TA406"]
