--- a/cta_names_mappings.json
+++ b/cta_names_mappings.json
@@ -374,5 +374,8 @@
   },
   "Scattered Spider": {
     "full_aliases": ["Roasted 0ktapus", "UNC3944"]
+  },
+  "KillNet": {
+    "full_aliases": ["Zatoichi"]
   }
 }
