--- a/cta_names_mappings.json
+++ b/cta_names_mappings.json
@@ -377,5 +377,8 @@
   },
   "KillNet": {
     "full_aliases": ["Zatoichi"]
+  },
+  "Urpage": {
+    "full_aliases": ["EHDEVEL", "WINDSHIFT", "THE WHITE COMPANY", "BAHAMUT"]
   }
 }
