--- a/cta_names_mappings.json
+++ b/cta_names_mappings.json
@@ -380,5 +380,7 @@
   },
   "Urpage": {
     "full_aliases": ["EHDEVEL", "WINDSHIFT", "THE WHITE COMPANY", "BAHAMUT"]
+  },
+  "GOLD DUPONT": {
   }
 }
