--- a/cta_names_mappings.json
+++ b/cta_names_mappings.json
@@ -382,5 +382,8 @@
     "full_aliases": ["EHDEVEL", "WINDSHIFT", "THE WHITE COMPANY", "BAHAMUT"]
   },
   "GOLD DUPONT": {
+  },
+  "Turla": {
+    "full_aliases": ["CTG-8875", "ITG12", "KRYPTON", "Venomous Bear", "Waterbug", "Iron Hunter", "Uroburos"]
   }
 }
