--- a/cta_names_mappings.json
+++ b/cta_names_mappings.json
@@ -385,5 +385,6 @@
   },
   "Turla": {
     "full_aliases": ["CTG-8875", "ITG12", "KRYPTON", "Venomous Bear", "Waterbug", "Iron Hunter", "Uroburos"]
+    "countries": ["RU"]
   }
 }
