--- a/cta_names_mappings.json
+++ b/cta_names_mappings.json
@@ -386,5 +386,7 @@
   "Turla": {
     "full_aliases": ["CTG-8875", "ITG12", "KRYPTON", "Venomous Bear", "Waterbug", "Iron Hunter", "Uroburos"]
     "countries": ["RU"]
+  },
+  "Void Balaur": {
   }
 }
