--- a/cta_names_mappings.json
+++ b/cta_names_mappings.json
@@ -389,5 +389,11 @@
   },
   "Void Balaur": {
     "full_aliases": ["Rockethack"]
+  },
+  "TEMP.Hermit": {
+  },
+  "Kimsuky": {
+  },
+  "Lorec53": {
   }
 }
