--- a/cta_names_mappings.json
+++ b/cta_names_mappings.json
@@ -405,5 +405,10 @@
   "IAmTheKing": {
   },
   "IntelBroker": {
+  },
+  "Gonjeshke Darande": {
+    "full_aliases": ["Predatory Sparrow"]
+  },
+  "Indra": {
   }
 }
