Syntax fix on cta_names_mappings.json

--- a/cta_names_mappings.json
+++ b/cta_names_mappings.json
@@ -384,7 +384,7 @@
   "GOLD DUPONT": {
   },
   "Turla": {
-    "full_aliases": ["CTG-8875", "ITG12", "KRYPTON", "Venomous Bear", "Waterbug", "Iron Hunter", "Uroburos"]
+    "full_aliases": ["CTG-8875", "ITG12", "KRYPTON", "Venomous Bear", "Waterbug", "Iron Hunter", "Uroburos"],
     "countries": ["RU"]
   },
   "Void Balaur": {
