--- a/cta_names_mappings.json
+++ b/cta_names_mappings.json
@@ -410,5 +410,11 @@
     "full_aliases": ["Predatory Sparrow"]
   },
   "Indra": {
+  },
+  "8220 Gang": {
+  },
+  "Hagga": {
+  },
+  "IndigoZebra": {
   }
 }
