--- a/cta_names_mappings.json
+++ b/cta_names_mappings.json
@@ -394,7 +394,9 @@
   },
   "Kimsuky": {
   },
-  "Lorec53": {
+  "EMBER BEAR": {
+    "full_aliases": ["UAC-0056", "Lorec53", "Lorec Bear", "Bleeding Bear", "Saint Bear"],
+    "countries": ["RU"]
   },
   "MontysThree": {
   },
