--- a/cta_names_mappings.json
+++ b/cta_names_mappings.json
@@ -144,7 +144,7 @@
   "TA427": {
   },
   "Ruby Sleet": {
-    "full_aliases": ["CERIUM"]
+    "full_aliases": ["CERIUM"],
     "countries": ["KP"]
   },
   "APT38": {
