--- a/cta_names_mappings.json
+++ b/cta_names_mappings.json
@@ -593,5 +593,8 @@
   },
   "TA551": {
     "full_aliases": ["Shathak", "GOLD CABIN", "Monster Libra"]
+  },
+  "Red Alpha": {
+    "countries": ["CN"]
   }
 }
