--- a/cta_names_mappings.json
+++ b/cta_names_mappings.json
@@ -595,6 +595,7 @@
     "full_aliases": ["Shathak", "GOLD CABIN", "Monster Libra"]
   },
   "Red Alpha": {
+    "full_aliases": ["Deepcliff", "Red Dev 3"],
     "countries": ["CN"]
   }
 }
